--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -2,5 +2,13 @@
 <%= link_to "Customers", customers_url %> |
 <%= link_to "Hour Types", hour_types_path %> |
 <%= link_to "Activity Templates", activities_path %> |
+<%= link_to "Tags", tags_path %> |
+<%= link_to "Tag categories", tag_types_path %> |
 <%= link_to "Configure", configurations_path %>
+
 <br/><br/>
+
+ <p class="notice"><%= flash[:notice] %></p>
+ <p class="error"><%= flash[:error] %></p>
+
+ <br/>
