--- a/app/views/tags/_tags.html.erb
+++ b/app/views/tags/_tags.html.erb
@@ -1,10 +1,11 @@
 <%= will_paginate tags %>
-<table>
+<table class="regular">
+  <tr><th>Name</th><th>Edit</th><th>Delete</th></tr>
   <% tags.each do |tag| -%>
     <tr>
       <td><%= image_tag "led-icons/#{tag.tag_type.icon}.png", :alt => "#{tag.tag_type.name} - " %> <%= link_to tag.name, :action => 'edit', :id => tag %></td>
-      <td><%= link_to image_tag("pencil.png", :title => "Edit"), :action => "edit", :id => tag %>
-          <%= link_to image_tag("delete.png", :title => "Delete"), tag_path(tag), :method => :delete, :tag_type => params[:tag_type] %></td>
+      <td><%= link_to image_tag("pencil.png", :title => "Edit"), :action => "edit", :id => tag %></td>
+      <td><%= link_to image_tag("delete.png", :title => "Delete"), tag_path(tag), :method => :delete, :tag_type => params[:tag_type] %></td>
     </tr>
   <% end -%>
 </table>
