Moved project validation in CustomersController destroy action to Customers model. Small cosmetic code changes. Fixed failing tests in TagTypesControllerTest (complained of missing attribute 'mutually_exclusive').

--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -74,7 +74,7 @@
   </div>
 </div>
 
-Ballance: <span class="<%= case @period.ballance when (-9999..0) then "red" when (0..9999) then "ok" end %>">
+Balance: <span class="<%= case @period.ballance when (-9999..0) then "red" when (0..9999) then "ok" end %>">
   <%= "%+.1f" % @period.ballance %></span> hours
 <%= ((@period.start..@period.end).include? Date.today) ? "in the first #{Date.today.mday} days" : '' %>
 <br/>
