--- a/app/views/reports/_search_advanced_form.html.erb
+++ b/app/views/reports/_search_advanced_form.html.erb
@@ -65,6 +65,22 @@
                 <td><%= select_tag "project", empty_option("-----------"), {:disabled => true} %></td>
               <% end %>
             </tr>
+
+            <tr> <td></td></tr>
+
+            <tr>
+              <td><%= label_tag "tag_type","Category"%></td>
+              <td><%= select_tag "tag_type", empty_option("All") + options_from_collection_for_select(TagType.all, :id, :name, params[:tag_type].to_i) %></td>
+            </tr>
+            <tr>
+              <% if tag_type %>
+                <td><%= label_tag "tag",'Tag'%></td>
+                <td><%= select_tag "tag", empty_option("All") + options_from_collection_for_select(tag_type.tags, :id, :name, params[:tag].to_i) %></td>
+              <% else %>
+                <td><%= label_tag "tag","Tag", :class => 'disabled' %></td>
+                <td><%= select_tag "tag", empty_option("-----------"), {:disabled => true} %></td>
+              <% end %>
+            </tr>
           </table>
         </td>
 
