--- a/app/views/activities/_activities.html.erb
+++ b/app/views/activities/_activities.html.erb
@@ -7,6 +7,7 @@
 	<tr>
 		<th>Name</th>
 		<th>Description</th>
+                <th>Show</th>
 		<th>Edit</th>
 		<th>Delete</th>
 	</tr>
@@ -15,6 +16,7 @@
 		<tr>
 			<td><%= activity.name %></td>
 			<td><%= activity.description %></td>
+                        <td><%= link_to image_tag("magnifier.png", :title => "Show"), activity_path(activity) %></td>
 			<td><%= link_to image_tag("pencil.png", :title => "Edit"), edit_activity_path(activity) %></td>
 		    <td><%= link_to image_tag("delete.png", :title => "Delete"), activity_path(activity), :method => :delete, :confirm => "Really remove #{activity.name}?" %></td>
 		</tr>
