--- a/app/views/reports/user.html.erb
+++ b/app/views/reports/user.html.erb
@@ -58,6 +58,6 @@
   </table>
   <br/>
 
-<%= render :partial => 'download', :locals => { :params => params, :action => 'user' } -%>
+<%#= render :partial => 'download', :locals => { :params => params, :action => 'user' } -%>
 
 
