added billable field to customers by which billing report is filtered

--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -7,6 +7,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </p>
+  
+  <p>
+    <%= f.check_box :billable %>
+    <%= f.label :billable %>
+  </p>
+
   <p>
     <%= f.submit 'Update' %>
   </p>
