tweaked the visuals for links, and added billing degree for month review

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,3 +1,4 @@
+<div class="sub_menu">
 <%= link_to "Users", users_path %> |
 <%= link_to "Customers", customers_url %> |
 <%= link_to "Hour Types", hour_types_path %> |
@@ -5,8 +6,8 @@
 <%= link_to "Tags", tags_path %> |
 <%= link_to "Tag categories", tag_types_path %> |
 <%= link_to "Configure", configurations_path %>
+</div>
 
-<br/><br/>
 
  <p class="notice"><%= flash[:notice] %></p>
  <p class="error"><%= flash[:error] %></p>
