--- a/app/views/holidays/_sub_menu.html.erb
+++ b/app/views/holidays/_sub_menu.html.erb
@@ -1,4 +1,4 @@
-<div id="nav">
+<div class="sub_menu" id="nav">
   <%= link_to "Vacation", :controller => :vacations %> |
   <% if @current_user.admin -%>
     <%= link_to "Vacation Overview", :controller => :vacations, :action => :vacation_overview %> |
