--- a/app/views/reports/_sub_menu.html.erb
+++ b/app/views/reports/_sub_menu.html.erb
@@ -1,7 +1,7 @@
-<p>
+<div class="sub_menu">
 <%=  link_to "Billing", :action => 'billing' %> |
 <%=  link_to "Search", :action => 'search' %> |
 
 <%=  link_to "Summary", :action => 'summary' %> |
 <%=  link_to "User overview", :action => 'user' %>
-</p>
+</div>
