--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -26,10 +26,10 @@
         </tr>
       <% end %>
       <tr>
-        <td style="border-top-style: solid;border-width: 1px">
+        <td class="overline">
           <b>Total:</b>
         </td>
-        <td style="border-top-style: solid;border-width: 1px; text-align:right; min-width:3em;">
+        <td class="overline" style="text-align:right; min-width:3em;">
           <b> <%= @period.total_hours -%></b>
         </td>
       </tr>
@@ -74,11 +74,14 @@
   </div>
 </div>
 
+<p>
 Ballance: <span class="<%= case @period.ballance when (0..9999) then "ok" when (-9999..0) then "red" end %>">
   <%= "%+.1f" % @period.ballance %></span> hours
 <%= ((@period.start..@period.end).include? Date.today) ? "in the first #{(Date.today.mday) -1} days" : '' %>
-<br/>
+</p>
+<p>
 Billing degree: <%= (@period.billing_degree * 100).round %> %
+</p>
 <hr/>
 <br/>
 
