--- a/app/views/reports/details.html.erb
+++ b/app/views/reports/details.html.erb
@@ -13,7 +13,7 @@
 <br/>
 <% time_entries = TimeEntry.for_user(@user).for_project(@project).between(@day, @day.at_end_of_month) %>
 
-<table class="regular">
+<table width="100%" class="regular">
   <tr><th>Date</th><th>Activity</th><th>Type</th><th>Hours</th><th>Notes</th></tr>
 <% time_entries.each do |e|%>
   <tr>
@@ -21,7 +21,7 @@
 <td><%= e.activity.name %></td>
 <td><%= e.hour_type.name %></td>
 <td><%= e.hours %></td>
-<td><%= e.notes %></td>
+<td width="60%"><%= e.notes %></td>
   </tr>
 <% end %>
 </table>
