--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -34,6 +34,12 @@ div.tag_symbol:hover span.alt {
   font-size: 10px;
 }
 
+tr .sidelines {
+    border-left-style: solid;
+    border-right-style: solid;
+    border-width: 1px
+}
+
 tr .overline {
     border-top-style: solid;
     border-width: 1px
