--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -77,7 +77,7 @@
 <p>
 Ballance: <span class="<%= case @period.ballance when (0..9999) then "ok" when (-9999..0) then "red" end %>">
   <%= "%+.1f" % @period.ballance %></span> hours
-<%= ((@period.start..@period.end).include? Date.today) ? "in the first #{(Date.today.mday) -1} days" : '' %>
+<%= ((@period.start...@period.end).include? Date.today) ? "in the first #{(Date.today.mday) -1} days" : '' %>
 </p>
 <p>
 Billing degree: <%= (@period.billing_degree * 100).round %> %
