Removed LDAP config and options. Truncated notes in time entries to avoid linebreak. Implemented sort-by-most-used functionality when asking for current_activities (User). It will sort based on data 7 days back in time. Added a sample factory-girl factory, but it is not used anywhere.

--- a/app/views/time_entries/_show_time_entry.html.erb
+++ b/app/views/time_entries/_show_time_entry.html.erb
@@ -2,7 +2,7 @@
 	<td width="28%"><%= link_to time_entry.activity.truncated_name_path, activity_path(time_entry.activity) %></td>
 	<td width="10%"><%= truncate(time_entry.hour_type.name, :length => 15) %></td>
 	<td width="5%"><%= time_entry.hours %></td> 
-	<td><%=h time_entry.notes %></td>
+	<td title='<%=h time_entry.notes %>'><%=h truncate(time_entry.notes, :length => 60) %></td>
 	<td width="10%" class="actions">
                 <% unless time_entry.tags.empty? %>
                   <%= image_tag("tag_gray.png", :title => time_entry.tags.join(', ')) %>
