--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -1,6 +1,5 @@
 <div id="week_total">
-    Week total <b><%= TimeEntry.for_user(@user).between(@date, (@date + 6)).sum(:hours) %></b>
-    Expected <b><%= Holiday.expected_hours_between( @date, (@date + 4)) %></b>
+  <%= render :partial => "week_total", :locals => { :user => @user, :date => @date } %>
 </div>
 
 <h1>Time Entries 
@@ -13,9 +12,9 @@
 
 <div class="navigation">
 	<h4>
-		<%= link_to "<<", user_time_entries_path(:user_id => params[:user_id], :date => @date.beginning_of_week.-(7)) %>
+		<%= link_to "<<", user_time_entries_path(:user_id => params[:user_id], :date => @date -7) %>
 		<span>Week <%= @date.cweek %></span>
-		<%= link_to ">>", user_time_entries_path(:user_id => params[:user_id], :date => @date.beginning_of_week.+(7)) %>
+		<%= link_to ">>", user_time_entries_path(:user_id => params[:user_id], :date => @date +7) %>
 	</h4>
 </div>
 
