created separate reports summarizing hours for all customers and for a project

--- a/app/views/reports/_billing_content.erb
+++ b/app/views/reports/_billing_content.erb
@@ -3,9 +3,11 @@
 
   <p class="error"><%= flash[:error] %></p>
 
+  <%= will_paginate @billable_customers %>
+
   <% form_tag 'billing_action', :method => 'get', :id => 'billing_workflow' do %>
     <table class="regular">
-      <% Customer.billable(true).each do |customer| %>
+      <% @billable_customers.each do |customer| %>
         
         <tr>
           <td colspan="99"> <h3 class="compact"><%= customer.name %></h3></td>
@@ -51,6 +53,8 @@
         <% end %>
       <% end %>
     </table>
+
+    <%= will_paginate @billable_customers %>
 
     <br/>
     <hr/>
