--- a/app/views/reports/_sub_menu.html.erb
+++ b/app/views/reports/_sub_menu.html.erb
@@ -2,6 +2,6 @@
 <%=  link_to "Billing", :action => 'billing' %> |
 <%=  link_to "Search", :action => 'search' %> |
 
-<%=  link_to "Summary", :action => 'summary' %> |
+<%=  link_to "Customers", :action => 'customer' %> |
 <%=  link_to "User overview", :action => 'user' %>
 </div>
