--- a/app/views/reports/user.html.erb
+++ b/app/views/reports/user.html.erb
@@ -7,14 +7,7 @@
 <p class="notice"><%= flash[:notice] %></p>
 
 
-<% form_tag :action => 'user', :method => 'get' do %>
-  <label for="status">Status</label>
-  <%= select_tag "status", options_for_select(User.status_values, params[:status].to_i), {:include_blank => 'None'} %>
-  <%= submit_tag 'Generate' %>
-<% end %>
-
-  <br/>
-  <hr/>
+  <%= will_paginate @users %>
 
   <table class="regular">
     <tr>
@@ -59,6 +52,8 @@
     </tr>
     
   </table>
+
+  <%= will_paginate @users %>
   <br/>
 
 <%#= render :partial => 'download', :locals => { :params => params, :action => 'user' } -%>
