Added flash notice/error messages for the ProjectsController destroy action. Also made customers show view display them.

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -2,8 +2,10 @@
 
 <p><%= @customer.billable ? 'Billable' : 'Not billable' %></p>
 
-
 <h3>Projects</h3>
+
+<p class="error"><%=h flash[:error] %></p>
+<p class="notice"><%=h flash[:notice] %></p>
 
 <table>
   <tr>
